--- a/src/components/Profile.astro
+++ b/src/components/Profile.astro
@@ -40,7 +40,7 @@
         class="flex flex-col items-center space-y-2 opacity-90 hover:opacity-100 transition-opacity"
       >
         <img
-          src="../../public/assets/icons/html5.svg"
+          src="..../assets/icons/html5.svg"
           alt="HTML5"
           class="w-12 h-12"
         />
@@ -52,7 +52,7 @@
         class="flex flex-col items-center space-y-2 opacity-90 hover:opacity-100 transition-opacity"
       >
         <img
-          src="./../public/assets/icons/css3.svg"
+          src=".../assets/icons/css3.svg"
           alt="CSS3"
           class="w-12 h-12"
         />
@@ -64,7 +64,7 @@
         class="flex flex-col items-center space-y-2 opacity-90 hover:opacity-100 transition-opacity"
       >
         <img
-          src="./../public/assets/icons/javascript.svg"
+          src=".../assets/icons/javascript.svg"
           alt="JavaScript"
           class="w-12 h-12"
         />
@@ -76,7 +76,7 @@
         class="flex flex-col items-center space-y-2 opacity-90 hover:opacity-100 transition-opacity"
       >
         <img
-          src="./../public/assets/icons/mysql.svg"
+          src=".../assets/icons/mysql.svg"
           alt="MySQL"
           class="w-12 h-12"
         />
@@ -88,7 +88,7 @@
         class="flex flex-col items-center space-y-2 opacity-90 hover:opacity-100 transition-opacity"
       >
         <img
-          src="./../public/assets/icons/php.svg"
+          src=".../assets/icons/php.svg"
           alt="PHP"
           class="w-12 h-12"
         />
@@ -100,7 +100,7 @@
         class="flex flex-col items-center space-y-2 opacity-90 hover:opacity-100 transition-opacity"
       >
         <img
-          src="./../public/assets/icons/laravel.svg"
+          src=".../assets/icons/laravel.svg"
           alt="Laravel"
           class="w-12 h-12"
         />
@@ -112,7 +112,7 @@
         class="flex flex-col items-center space-y-2 opacity-90 hover:opacity-100 transition-opacity"
       >
         <img
-          src="./../public/assets/icons/spring-boot.svg"
+          src=".../assets/icons/spring-boot.svg"
           alt="spring-boot"
           class="w-12 h-12"
         />
@@ -124,7 +124,7 @@
         class="flex flex-col items-center space-y-2 opacity-90 hover:opacity-100 transition-opacity"
       >
         <img
-          src="./../public/assets/icons/anaconda.svg"
+          src=".../assets/icons/anaconda.svg"
           alt="Anaconda"
           class="w-12 h-12"
         />
@@ -136,7 +136,7 @@
         class="flex flex-col items-center space-y-2 opacity-90 hover:opacity-100 transition-opacity"
       >
         <img
-          src="./../public/assets/icons/java.svg"
+          src=".../assets/icons/java.svg"
           alt="Java"
           class="w-12 h-12"
         />
@@ -148,7 +148,7 @@
         class="flex flex-col items-center space-y-2 opacity-90 hover:opacity-100 transition-opacity"
       >
         <img
-          src="./../public/assets/icons/python.svg"
+          src=".../assets/icons/python.svg"
           alt="Python"
           class="w-12 h-12"
         />
@@ -160,7 +160,7 @@
         class="flex flex-col items-center space-y-2 opacity-90 hover:opacity-100 transition-opacity"
       >
         <img
-          src="./../public/assets/icons/mongo.svg"
+          src=".../assets/icons/mongo.svg"
           alt="MongoDB"
           class="w-12 h-12"
         />
@@ -172,7 +172,7 @@
         class="flex flex-col items-center space-y-2 opacity-90 hover:opacity-100 transition-opacity"
       >
         <img
-          src="./../public/assets/icons/astro.svg"
+          src=".../assets/icons/astro.svg"
           alt="Astro"
           class="w-12 h-12"
         />
@@ -184,7 +184,7 @@
         class="flex flex-col items-center space-y-2 opacity-90 hover:opacity-100 transition-opacity"
       >
         <img
-          src="./../public/assets/icons/terraform.svg"
+          src=".../assets/icons/terraform.svg"
           alt="Terraform"
           class="w-12 h-12"
         />
@@ -196,7 +196,7 @@
         class="flex flex-col items-center space-y-2 opacity-90 hover:opacity-100 transition-opacity"
       >
         <img
-          src="./../public/assets/icons/react.svg"
+          src=".../assets/icons/react.svg"
           alt="React"
           class="w-12 h-12"
         />
@@ -302,7 +302,7 @@
       class="group relative block bg-primary/60 rounded-xl overflow-hidden shadow-lg hover:shadow-2xl transition-shadow duration-300"
     >
       <img
-        src="/public/assets/imgs/VOAE.webp"
+        src="/assets/imgs/VOAE.webp"
         alt="Proyecto 3"
         class="w-full h-40 object-cover group-hover:scale-105 transition-transform duration-300"
       />
@@ -322,7 +322,7 @@
       class="group relative block bg-primary/60 rounded-xl overflow-hidden shadow-lg hover:shadow-2xl transition-shadow duration-300"
     >
       <img
-        src="/public/assets/imgs/registroUNAH.webp"
+        src="/assets/imgs/registroUNAH.webp"
         alt="Proyecto 2"
         class="w-full h-40 object-cover group-hover:scale-105 transition-transform duration-300"
       />
@@ -342,7 +342,7 @@
       class="group relative block bg-primary/60 rounded-xl overflow-hidden shadow-lg hover:shadow-2xl transition-shadow duration-300"
     >
       <img
-        src="/public/assets/imgs/CodeCabinet.webp"
+        src="/assets/imgs/CodeCabinet.webp"
         alt="Proyecto 2"
         class="w-full h-40 object-cover group-hover:scale-105 transition-transform duration-300"
       />
@@ -361,7 +361,7 @@
       class="group relative block bg-primary/60 rounded-xl overflow-hidden shadow-lg hover:shadow-2xl transition-shadow duration-300"
     >
       <img
-        src="/public/assets/imgs/phPascal.webp"
+        src="/assets/imgs/phPascal.webp"
         alt="Proyecto 2"
         class="w-full h-40 object-cover group-hover:scale-105 transition-transform duration-300"
       />
@@ -381,7 +381,7 @@
       class="group relative block bg-primary/60 rounded-xl overflow-hidden shadow-lg hover:shadow-2xl transition-shadow duration-300"
     >
       <img
-        src="/public/assets/imgs/enDesarrollo.webp"
+        src="/assets/imgs/enDesarrollo.webp"
         alt="Proyecto 4"
         class="w-full h-40 object-cover group-hover:scale-105 transition-transform duration-300"
       />
@@ -401,7 +401,7 @@
       class="group relative block bg-primary/60 rounded-xl overflow-hidden shadow-lg hover:shadow-2xl transition-shadow duration-300"
     >
       <img
-        src="/public/assets/imgs/enDesarrollo.webp"
+        src="/assets/imgs/enDesarrollo.webp"
         alt="Proyecto 4"
         class="w-full h-40 object-cover group-hover:scale-105 transition-transform duration-300"
       />
@@ -421,7 +421,7 @@
       class="group relative block bg-primary/60 rounded-xl overflow-hidden shadow-lg hover:shadow-2xl transition-shadow duration-300"
     >
       <img
-        src="/public/assets/imgs/Wordle.webp"
+        src="/assets/imgs/Wordle.webp"
         alt="Proyecto 2"
         class="w-full h-40 object-cover group-hover:scale-105 transition-transform duration-300"
       />
