--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -28,6 +28,6 @@
     </div>
     <!-- Foto -->
     <div class="p-1 bg-gradient-to-r from-purple-500 via-pink-500 to-red-500 rounded-xl shadow-xl hover:scale-105 transition-transform duration-300 max-w-xs opacity-0" data-animate>
-        <img src="../../public/assets/imgs/profile.webp" alt="Foto de perfil" class="rounded-lg border-4 border-primary object-cover w-full h-auto"/>
+        <img src="/assets/imgs/profile.webp" alt="Foto de perfil" class="rounded-lg border-4 border-primary object-cover w-full h-auto"/>
     </div>
 </section>
