--- a/src/components/Profile.astro
+++ b/src/components/Profile.astro
@@ -40,7 +40,7 @@
         class="flex flex-col items-center space-y-2 opacity-90 hover:opacity-100 transition-opacity"
       >
         <img
-          src="..../assets/icons/html5.svg"
+          src="/assets/icons/html5.svg"
           alt="HTML5"
           class="w-12 h-12"
         />
@@ -52,7 +52,7 @@
         class="flex flex-col items-center space-y-2 opacity-90 hover:opacity-100 transition-opacity"
       >
         <img
-          src=".../assets/icons/css3.svg"
+          src="/assets/icons/css3.svg"
           alt="CSS3"
           class="w-12 h-12"
         />
@@ -64,7 +64,7 @@
         class="flex flex-col items-center space-y-2 opacity-90 hover:opacity-100 transition-opacity"
       >
         <img
-          src=".../assets/icons/javascript.svg"
+          src="/assets/icons/javascript.svg"
           alt="JavaScript"
           class="w-12 h-12"
         />
@@ -76,7 +76,7 @@
         class="flex flex-col items-center space-y-2 opacity-90 hover:opacity-100 transition-opacity"
       >
         <img
-          src=".../assets/icons/mysql.svg"
+          src="/assets/icons/mysql.svg"
           alt="MySQL"
           class="w-12 h-12"
         />
@@ -88,7 +88,7 @@
         class="flex flex-col items-center space-y-2 opacity-90 hover:opacity-100 transition-opacity"
       >
         <img
-          src=".../assets/icons/php.svg"
+          src="/assets/icons/php.svg"
           alt="PHP"
           class="w-12 h-12"
         />
@@ -100,7 +100,7 @@
         class="flex flex-col items-center space-y-2 opacity-90 hover:opacity-100 transition-opacity"
       >
         <img
-          src=".../assets/icons/laravel.svg"
+          src="/assets/icons/laravel.svg"
           alt="Laravel"
           class="w-12 h-12"
         />
@@ -112,7 +112,7 @@
         class="flex flex-col items-center space-y-2 opacity-90 hover:opacity-100 transition-opacity"
       >
         <img
-          src=".../assets/icons/spring-boot.svg"
+          src="/assets/icons/spring-boot.svg"
           alt="spring-boot"
           class="w-12 h-12"
         />
@@ -124,7 +124,7 @@
         class="flex flex-col items-center space-y-2 opacity-90 hover:opacity-100 transition-opacity"
       >
         <img
-          src=".../assets/icons/anaconda.svg"
+          src="/assets/icons/anaconda.svg"
           alt="Anaconda"
           class="w-12 h-12"
         />
@@ -136,7 +136,7 @@
         class="flex flex-col items-center space-y-2 opacity-90 hover:opacity-100 transition-opacity"
       >
         <img
-          src=".../assets/icons/java.svg"
+          src="/assets/icons/java.svg"
           alt="Java"
           class="w-12 h-12"
         />
@@ -148,7 +148,7 @@
         class="flex flex-col items-center space-y-2 opacity-90 hover:opacity-100 transition-opacity"
       >
         <img
-          src=".../assets/icons/python.svg"
+          src="/assets/icons/python.svg"
           alt="Python"
           class="w-12 h-12"
         />
@@ -160,7 +160,7 @@
         class="flex flex-col items-center space-y-2 opacity-90 hover:opacity-100 transition-opacity"
       >
         <img
-          src=".../assets/icons/mongo.svg"
+          src="/assets/icons/mongo.svg"
           alt="MongoDB"
           class="w-12 h-12"
         />
@@ -172,7 +172,7 @@
         class="flex flex-col items-center space-y-2 opacity-90 hover:opacity-100 transition-opacity"
       >
         <img
-          src=".../assets/icons/astro.svg"
+          src="/assets/icons/astro.svg"
           alt="Astro"
           class="w-12 h-12"
         />
@@ -184,7 +184,7 @@
         class="flex flex-col items-center space-y-2 opacity-90 hover:opacity-100 transition-opacity"
       >
         <img
-          src=".../assets/icons/terraform.svg"
+          src="/assets/icons/terraform.svg"
           alt="Terraform"
           class="w-12 h-12"
         />
@@ -196,7 +196,7 @@
         class="flex flex-col items-center space-y-2 opacity-90 hover:opacity-100 transition-opacity"
       >
         <img
-          src=".../assets/icons/react.svg"
+          src="/assets/icons/react.svg"
           alt="React"
           class="w-12 h-12"
         />
