--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,5 +26,6 @@ import "../styles/global.css";
     >
       <slot />
     </main>
+    <script src="/assets/js/script.js" type="module"></script>
   </body>
 </html>
