--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Header from "../components/Header.astro";
 import About from "../components/About.astro";
 import Profile from "../components/Profile.astro";
 import Footer from "../components/Footer.astro";
+import Projects from '../components/profile/Projects.astro';
 ---
 
 <Layout title="Portafolio">
@@ -13,6 +14,7 @@ import Footer from "../components/Footer.astro";
   <main class="relative z-10 flex flex-col items-center justify-start space-y-12 py-12">
     <About />
     <Profile />
+    <Projects />
     <Footer />
   </main>
 </Layout>
