--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,6 +26,6 @@ import "../styles/global.css";
     >
       <slot />
     </main>
-    <script type="module" src="/public/scripts/script.js"></script>
+    <script type="module" src="/scripts/script.js"></script>
   </body>
 </html>
