--- a/src/components/profile/Interests&SoftSkills.astro
+++ b/src/components/profile/Interests&SoftSkills.astro
@@ -17,7 +17,7 @@
       <li>Trabajo en equipo</li>
       <li>Escucha activa</li>
       <li>Resolución de problemas</li>
-      <li>Empatía profesional</li>
+      <li>Empatía</li>
       <li>Capacidad para recibir y dar retroalimentación</li>
       <li>Autonomía e iniciativa</li>
       <li>Responsabilidad y ética laboral</li>
