--- a/src/components/profile/SkillsSets.astro
+++ b/src/components/profile/SkillsSets.astro
@@ -1,32 +1,24 @@
 <div>
   <h3 class="text-xl font-semibold mb-2 text-accent">Sets de Habilidades</h3>
   <div class="flex flex-wrap gap-2">
-    <span class="bg-primary border border-accent text-accent px-3 py-1 rounded-full text-sm font-medium transition-colors duration-300 ease-in-out hover:bg-accent hover:text-primary cursor-pointer">
-      Programación orientada a objetos
-    </span>
-    <span class="bg-primary border border-accent text-accent px-3 py-1 rounded-full text-sm font-medium transition-colors duration-300 ease-in-out hover:bg-accent hover:text-primary cursor-pointer">
-      Desarrollo Frontend
-    </span>
-    <span
-      class="bg-primary border border-accent text-accent px-3 py-1 rounded-full text-sm font-medium transition-colors duration-300 ease-in-out hover:bg-accent hover:text-primary cursor-pointer">
-      Machine Learning
-    </span>
-    <span
-      class="bg-primary border border-accent text-accent px-3 py-1 rounded-full text-sm font-medium transition-colors duration-300 ease-in-out hover:bg-accent hover:text-primary cursor-pointer">
-      Diseño relacional
-    </span>
     <span
       class="bg-primary border border-accent text-accent px-3 py-1 rounded-full text-sm font-medium transition-colors duration-300 ease-in-out hover:bg-accent hover:text-primary cursor-pointer">
       Principios de seguridad en el desarrollo
     </span>
-    <span class="bg-primary border border-accent text-accent px-3 py-1 rounded-full text-sm font-medium transition-colors duration-300 ease-in-out hover:bg-accent hover:text-primary cursor-pointer">
-      Scrum
+    <span
+      class="bg-primary border border-accent text-accent px-3 py-1 rounded-full text-sm font-medium transition-colors duration-300 ease-in-out hover:bg-accent hover:text-primary cursor-pointer">
+      Gestión y Optimización de Bases de Datos
+    </span>
+    <span
+      class="bg-primary border border-accent text-accent px-3 py-1 rounded-full text-sm font-medium transition-colors duration-300 ease-in-out hover:bg-accent hover:text-primary cursor-pointer">
+      Análisis y Diseño de Sistemas
     </span>
     <span class="bg-primary border border-accent text-accent px-3 py-1 rounded-full text-sm font-medium transition-colors duration-300 ease-in-out hover:bg-accent hover:text-primary cursor-pointer">
-      APIs REST
+      Scrum
     </span>
     <span class="bg-primary border border-accent text-accent px-3 py-1 rounded-full text-sm font-medium transition-colors duration-300 ease-in-out hover:bg-accent hover:text-primary cursor-pointer">
       UX/UI básico
     </span>
   </div>
 </div>
+<br>
